--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ version: 1.0.0+1
 environment:
   sdk: ">=2.7.0 <3.0.0"
 
+
+
 dependencies:
   flutter:
     sdk: flutter
@@ -32,6 +34,12 @@ dependencies:
   route_annotation: ^0.2.0
   http: ^0.12.0+2
   provider: ^3.2.0
+
+  firebase_core: ^0.5.3
+
+  # Add the dependency for the FlutterFire plugin for Google Analytics
+  firebase_analytics: ^6.3.0
+  firebase_crashlytics: ^0.2.4
 
 
 dev_dependencies:
