--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   # Add the dependency for the FlutterFire plugin for Google Analytics
   firebase_analytics: ^6.3.0
   firebase_crashlytics: ^0.2.4
+  flutter_local_notifications: ^0.7.1+1
+  firebase_messaging: ^5.0.1+1
+  fluttertoast: ^3.1.0
 
 
 dev_dependencies:
