--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,12 +43,18 @@ dependencies:
   flutter_local_notifications: ^0.7.1+1
   firebase_messaging: ^5.0.1+1
   fluttertoast: ^3.1.0
+  flutter_spinkit: ^4.1.2
+  shared_preferences: ^0.5.12+4
+  retrofit: ^1.3.4+1
+  logger: any  #for logging purpose
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  retrofit_generator: any
+  build_runner: any
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
