--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   shared_preferences: ^0.5.12+4
   retrofit: ^1.3.4+1
   logger: any  #for logging purpose
-
+ # splashscreen: ^1.2.0
 
 dev_dependencies:
   flutter_test:
