--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   retrofit: ^1.3.4+1
   logger: any  #for logging purpose
  # splashscreen: ^1.2.0
+  image_picker: ^0.6.1+4
+
 
 dev_dependencies:
   flutter_test:
